Guard the deprecated Output::setPrimary

Unsetting primary state directly on an output is not supported, but at
least we should properly warn about it instead of silently ignoring
the meaningless argument.

BUG: 471195
FIXED-IN: 5.27.7